--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -96,6 +96,12 @@
             }
         }
 
+        a.skills-link {
+            &:after {
+                content: 'SKILLS';
+            }
+        }
+
         a.portfolio-link {
             &:after {
                 content: 'PORTFOLIO';
