--- a/src/components/Home/Qoute/index.scss
+++ b/src/components/Home/Qoute/index.scss
@@ -1,10 +1,25 @@
 .quote-container {
-    background: rgba(8, 253, 216, 0.1);
     float: right;
     width: 50%;
     height: 100%;
     margin: 10px;
-    text-align: center
+    text-align: center;
+    background-image: url(../../../assets/images/batman.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-color: rgba(129, 166, 160, 0.1);
+    background-blend-mode: lighten;
+}
+
+.hobbies {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: center;
+    margin-top: 20px;
+    justify-content: space-evenly;
 }
 
 .flat-quote-button {
@@ -25,6 +40,28 @@
 
     &:hover {
         background: #c56d76;
+        color: #333;
+    }
+}
+
+.flat-hobby-button {
+    color: #24d41e;
+    font-size: 13px;
+    font-weight: 400;
+    letter-spacing: 4px;
+    font-family: sans-serif;
+    text-decoration: none;
+    padding: 10px 18px;
+
+    border: 1px solid #24d41e;
+    margin-top: 25px;
+    float: left;
+    animation: fadeInAnimation 1s 1.8s backwards;
+    white-space: normal !important;
+    word-wrap: break-word;
+
+    &:hover {
+        background: #24d41e;
         color: #333;
     }
 }
@@ -86,5 +123,9 @@ q {
         height: 100%;
         padding: 10px;
 
+    }
+
+    .hobbies {
+        flex-direction: column;
     }
 }
