--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -108,6 +108,12 @@
             }
         }
 
+        a.services-link {
+            &:after {
+                content: 'SERVICES';
+            }
+        }
+
         a.active {
             svg {
                 color: #ffd700;
