--- a/src/components/Portfolio/index.scss
+++ b/src/components/Portfolio/index.scss
@@ -16,6 +16,13 @@ $color_grey_dark: #ffffff;
         margin-top: 100px;
     }
 
+    .info-blog {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+
     .blog-card {
         display: flex;
         flex-direction: column;
@@ -166,7 +173,7 @@ $color_grey_dark: #ffffff;
             margin-top: 30px;
             margin-bottom: 10px;
             padding: 0 23px;
-            height: 40px;
+            height: auto;
             line-height: 34px;
             border: 2px solid #ffd700;
             border-radius: 4px;
